[tool.poetry]
name = "visionchat"
version = "0.1.0"
description = ""
authors = ["Abhinav Dayal <abhinav@enligence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
